Add more .csv files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 201402_station_data.csv
 201402_trip_data.csv
 201402_weather_data.csv
+201408_weather_data.csv
+201408_trip_data.csv
+201408_station_data.csv
+201309_trip_data.csv
+
